# wake-up

./: README.md  process.md  pyproject.toml
drowsiness-detector/: .gitignore  README.md  main.py  pyproject.toml
eye-status-api/: main.py
