[project]
name = "eye-status-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "pillow>=12.3.0",
    "python-multipart>=0.0.32",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
    "uvicorn[standard]>=0.50.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
